# MNISTNN2

./: CMakeLists.txt  LICENSE  README.md
doc/html/: _perceptron_8hpp.html  _perceptron_8hpp_source.html  annotated.html  classes.html  classneuralnetwork_1_1_backward___node-members.html  classneuralnetwork_1_1_backward___node.html  classneuralnetwork_1_1_forward___node-members.html  classneuralnetwork_1_1_forward___node.html  classneuralnetwork_1_1_perceptron-members.html  classneuralnetwork_1_1_perceptron.html  classneuralnetwork_1_1_update___node-members.html  classneuralnetwork_1_1_update___node.html  classneuralnetwork_1_1_wait___node-members.html  classneuralnetwork_1_1_wait___node.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  namespaceneuralnetwork_1_1activation.html  namespaces.html  pages.html  todo.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_1.js  functions_3.js  functions_4.js  (+9 more)
doc/latex/: _perceptron_8hpp.tex  annotated.tex  classneuralnetwork_1_1_backward___node.tex  classneuralnetwork_1_1_forward___node.tex  classneuralnetwork_1_1_perceptron.tex  classneuralnetwork_1_1_update___node.tex  classneuralnetwork_1_1_wait___node.tex  files.tex  main_8cpp.tex  namespaceneuralnetwork_1_1activation.tex  namespaces.tex  refman.tex  todo.tex
src/: Perceptron.hpp  main.cpp
